[gd_scene load_steps=8 format=2]

[ext_resource path="res://LizardGame/Sprites/Apple/AppleShadow.png" type="Texture" id=1]
[ext_resource path="res://LizardGame/Sprites/Apple/Apple.png" type="Texture" id=2]
[ext_resource path="res://LizardGame/World/Apple/Apple.gd" type="Script" id=3]
[ext_resource path="res://LizardGame/Sounds/Apple/Apple.wav" type="AudioStream" id=4]
[ext_resource path="res://LizardGame/Sounds/Apple/ApplePickup.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 5 )

[node name="Apple" type="KinematicBody2D"]
z_index = -10
z_as_relative = false
collision_layer = 8
script = ExtResource( 3 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.75 )
position = Vector2( -4, 2 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="FallingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
bus = "Sounds"

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
shape = SubResource( 2 )
disabled = true
